// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectSchema denormalization denormalizes an object 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object that contains a property representing a an object with an id of zero 1`] = `
Array [
  Object {
    "user": User {
      "id": "0",
      "name": "Chancho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object that contains a property representing a an object with an id of zero 2`] = `
Array [
  Object {
    "user": User {
      "id": "0",
      "name": "Chancho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object that contains a property representing a an object with an id of zero 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "0",
      "name": "Chancho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object with plain members 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object with plain members 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object with plain members 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 4`] = `
Array [
  Object {
    "tacos": Object {},
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 5`] = `
Array [
  Object {
    "tacos": Object {},
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 6`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.Map {},
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization should have found = true with null member even when schema has nested entity 1`] = `
Object {
  "item": null,
}
`;

exports[`ObjectSchema denormalization should have found = true with null member even when schema has nested entity 2`] = `
Object {
  "item": null,
}
`;

exports[`ObjectSchema denormalization should have found = true with null member even when schema has nested entity 3`] = `
Immutable.Map {
  "item": null,
}
`;

exports[`ObjectSchema normalization filters out undefined and null values 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "id": "1",
      },
    },
  },
  "entityMeta": Object {
    "User": Object {
      "1": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "bar": "1",
  },
}
`;

exports[`ObjectSchema normalization normalizes an object 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "id": "1",
      },
    },
  },
  "entityMeta": Object {
    "User": Object {
      "1": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "user": "1",
  },
}
`;

exports[`ObjectSchema normalization normalizes plain objects as shorthand for ObjectSchema 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "id": "1",
      },
    },
  },
  "entityMeta": Object {
    "User": Object {
      "1": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "user": "1",
  },
}
`;

exports[`ObjectSchema normalization should deserialize Date 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "5": User {
        "id": "5",
      },
    },
  },
  "entityMeta": Object {
    "User": Object {
      "5": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "createdAt": 2020-06-07T02:00:15.000Z,
    "nextPage": "blob",
    "user": "5",
  },
}
`;

exports[`ObjectSchema normalization should pass over when Date not provided 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "5": User {
        "id": "5",
      },
    },
  },
  "entityMeta": Object {
    "User": Object {
      "5": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "nextPage": "blob",
    "user": "5",
  },
}
`;
